Prueba de commit

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
-<!DOCTYPE html>
-<html lang="es">
+<html lang="Twins Cafe">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<title>Twins Coffee</title>
 </head>
 <body>
-	<h1>Hola Mundo</h1>
+	<div class="container-fluid">
+			<ul class="nav justify-content-end" style="background-color: black;">
+			  <li class="nav-item">
+			    <a class="nav-link active" style="color: white;" href="#">Twins Cafe</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" style="color: white;" href="#" >Local</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" style="color: white;" href="#">Facebook</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" style="color: white;" href="#">Conocenos</a>
+			  </li>
+			</ul>
+			<nav class="nav">
+			  <a class="nav-link active" href="#">Active</a>
+			  <a class="nav-link" href="#">Link</a>
+			  <a class="nav-link" href="#">Link</a>
+			  <a class="nav-link disabled" href="#">Disabled</a>
+			</nav>
+
+			<div class="row">
+				<div class="col-md-6">
+					<img src="img/img1.jpg" alt="" style="width: 100%;">
+				</div>
+				<div class="col-md-6">
+					<div class="row">
+						<img src="img/img2.jpg" alt="" style="width: 100%;">
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<img src="img/img2.jpg" alt="" style="width: 100%;">
+						</div>
+						<div class="col-md-6">
+							<img src="img/img3.jpg" alt="" style="width: 100%;">
+						</div>
+					</div>
+				</div>
+
+			</div>
+	</div>
 </body>
 </html>
