Prueba de snippets

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<title>Twins Coffee</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<div class="container-fluid">
@@ -20,12 +22,53 @@
 			    <a class="nav-link" style="color: white;" href="#">Conocenos</a>
 			  </li>
 			</ul>
+			
 			<nav class="nav">
 			  <a class="nav-link active" href="#">Active</a>
 			  <a class="nav-link" href="#">Link</a>
 			  <a class="nav-link" href="#">Link</a>
 			  <a class="nav-link disabled" href="#">Disabled</a>
 			</nav>
+
+				<div class="title-arch">Twins Coffe<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p></div>
+
+					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project wow animated animated4 fadeInLeft">
+				        <div class="project-hover">
+				        	<h2>TITLE</h2>
+				            
+				            <hr />
+				            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+				            <a href="#">See Project</a>
+				        </div>
+				    </div>
+					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-2 wow animated animated3 fadeInLeft">
+				    	<div class="project-hover">
+				        	<h2>TITLE</h2>
+				            <hr />
+				            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+				            <a href="#">See Project</a>
+				        </div>
+				    </div>
+					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-3 wow animated animated2 fadeInLeft">
+				    	<div class="project-hover">
+				        	<h2>TITLE</h2>
+				            <hr />
+				            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+				            <a href="#">See Project</a>
+				        </div>
+				    </div>
+					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-4 wow animated fadeInLeft">
+				    	<div class="project-hover">
+				        	<h2>TITLE</h2>
+				            <hr />
+				            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+				            <a href="#">See Project</a>
+				        </div>
+				    </div>
+				    <div class="clearfix"></div>
+
+		
+			
 
 			<div class="row">
 				<div class="col-md-6">
