--- a/Equipo.html
+++ b/Equipo.html
@@ -2,7 +2,7 @@
 <html lang="Twins Cafe">
 <head>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <title>Twins Coffee</title>
+  <title>Twins Café</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -13,6 +13,7 @@
   <link href="css/responsive.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="js/jquery-3.2.1.min.js">
   <link rel="stylesheet" type="text/css" href="jquery.expander.min.js">
+  <link rel="shortcut icon" type="img/x-icon" href="img/logoTwins.png">
   <script src="js/wow.min.js"></script>
 </head>
 <body>
@@ -26,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse1">
         <ul class="navbar-nav ml-auto">
          <li class="nav-item"> <a class="nav-link transicion" href="index.html">Home</a> </li>
-        <li class="nav-item active"> <a class="nav-link transicion colorVerde transicion" href="Equipo.html">Equipo</a> <span class="sr-only">(current)</span> </li>
+        <li class="nav-item active"> <a class="nav-link transicion colorVerde" href="Equipo.html">Equipo</a> <span class="sr-only">(current)</span> </li>
         <li class="nav-item"> <a class="nav-link transicion" href="galeria.html">Galería</a> </li>
         <li class="nav-item"> <a class="nav-link transicion" href="contactanoss/contactanos.html">Contactanos</a> </li>
         </ul>
@@ -35,7 +36,7 @@
     </nav>
     <div class="row">
       <section id="team">
-    <div class="container fondito margensito wow animated fadeInRightBig">
+    <div class="container fondito margensito2 wow animated fadeInRightBig">
       <div class="row">
           <div class=" text-center col-sm-8 col-sm-offset-2 wow fadeInUp margensitoArriba colorVerde" data-wow-duration="1200ms" data-wow-delay="300ms">
             <h1 class="colorVerde wow animated fadeInRight">Equipo</h1>
